--- a/favorite.html
+++ b/favorite.html
@@ -200,7 +200,7 @@
     <main>
         <div class="content-section">
             <div class="card">
-                <img src="구의증명.jpeg" alt="책 이미지">
+                <img src="images/구의증명.jpeg" alt="책 이미지">
                 <div class="card-text">
                     <h2 class="card-title">구의 증명</h2>
                     <div class="card-author">최진영</div>
